analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/destructuringTopLevel.kt
val (e) =

<expr>class C</expr>